# VideoNative

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/kivy/: main.py
scripts/: build-ffmpeg-macos.sh
src/: media_decoder.cpp  miniaudio_impl.mm
videonative_example/: main.kv  main.py
