[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "videonative"
version = "1.0.0"
description = "High-performance video rendering in Python powered by C++, FFmpeg, and miniaudio."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Kartavya Shukla" }
]
dependencies = [
    "numpy>=1.20.0",
    "libffmpeg ; sys_platform == 'android'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/Novfensec/videonative"
Repository = "https://github.com/Novfensec/videonative"

[project.optional-dependencies]
example = ["kivy", "carbonkivy"]

[project.scripts]
videonative-example = "videonative_example.main:main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["videonative_example"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.cibuildwheel]
environment = { PIP_EXTRA_INDEX_URL = "https://pypi.anaconda.org/pyswift/simple" }

[tool.cibuildwheel.android]
archs = ["arm64_v8a", "x86_64"]
environment = { ANDROID_API_LEVEL = "24" }

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64", "universal2"]
before-all = "bash scripts/build-ffmpeg-macos.sh"
environment = { PKG_CONFIG_PATH = "/tmp/ffmpeg-macos/lib/pkgconfig", MACOSX_DEPLOYMENT_TARGET = "11.0" }
